Passer les exemples HTML4.01 à HTML5

--- a/HTML/a-interne-name.html
+++ b/HTML/a-interne-name.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
 <title>Lien interne dans une page</title>
 </head>
 <body>
@@ -132,7 +132,7 @@ CREATE UNIQUE INDEX INDEX_ITEM1 ON ITEM(STYLE);
 		d'une entité n'ayant qu'un seul champ et aucune relation.</p>
 
 	<pre>
-<a name="figure">\begin{figure}[tb]</a>
+<a id="figure">\begin{figure}[tb]</a>
 \begin{MyMinipage}
 \begin{CodeSource}
 public class Color {
@@ -236,6 +236,5 @@ public class Color {
 		figure \ref{fig:interfacedao} illustre les fonctionnalités offertes
 		par un DAO. Dans cet exemple, le code des méthodes a été omis
 		volontairement.</p>
-
 </body>
 </html>
