--- a/HTML/blockquote-hr-pre.html
+++ b/HTML/blockquote-hr-pre.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
 <title>Différents éléments</title>
 </head>
 <body>
@@ -47,6 +47,5 @@
 			bonne série de tests sur les classes, ce qui permet de trouver
 			plusieurs petites erreurs de conception des classes.</p>
 	</blockquote>
-
 </body>
 </html>
