--- a/HTML/form-post-personne.html
+++ b/HTML/form-post-personne.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
 <title>Balise input</title>
 </head>
 <body>
-	<form action="readresource.php" method="get">
+	<form action="readresource.php" method="post">
 		<div>
 			<table>
 				<tr>
