--- a/CSS/conditional-comment/comment.html
+++ b/CSS/conditional-comment/comment.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Commentaires conditionnels</title>
-<link href="default.css" rel="stylesheet" type="text/css">
-<!-- [if IE 6]>
-<link href="ie6.css" rel="stylesheet" type="text/css">
-<![endif]-->
-</head>
-<body>
-<div id="rouge"><p>Boîte rouge</p></div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Commentaires conditionnels</title>
+    <link href="default.css" rel="stylesheet" type="text/css">
+    <!-- [if IE 6]>
+      <link href="ie6.css" rel="stylesheet" type="text/css">
+    <![endif]-->
+  </head>
+  <body>
+    <div id="rouge">
+      <p>Boîte rouge</p>
+    </div>
+  </body>
 </html>
