--- a/Javascript/redirection.html
+++ b/Javascript/redirection.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Redirection in 5 seconds</title>
-<script type="text/javascript">
-function redirect() {
-	window.location = "http://yougotrickrolled.com/";
-}
+  <head>
+    <meta charset="utf-8">
+    <title>Redirection in 5 seconds</title>
+    <script>
+      function redirect() {
+        window.location = "http://rickrolled.fr/";
+      }
 
-function timedEvent() {
-	setTimeout('redirect();', 5000);
-}
-</script>
-</head>
-<body onload="timedEvent();">
-    <p>You will be redirected in 5 seconds.</p>
-</body>
+      function timedEvent() {
+        setTimeout('redirect();', 5000);
+      }
+    </script>
+  </head>
+  <body onload="timedEvent();">
+      <p>You will be redirected in 5 seconds.</p>
+  </body>
 </html>
