--- a/Javascript/see-more.html
+++ b/Javascript/see-more.html
@@ -1,35 +1,35 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Liste de langages</title>
-<link href="css/see-more.css" rel="stylesheet" type="text/css">
+  <head>
+    <meta charset="utf-8">
+    <title>Liste de langages</title>
+    <link href="css/see-more.css" rel="stylesheet" type="text/css">
 
-<script type="text/javascript">
-	function displayAll() {
-		var liList = document.getElementsByTagName("li");
-		for (var i = 0; i < liList.length; i++) {
-			liList[i].style.display = "list-item";
-		}
-		document.getElementById("clickable").innerHTML = "";
-	}
-</script>
+    <script>
+      function displayAll() {
+        var liList = document.getElementsByTagName("li");
+        for (var i = 0; i < liList.length; i++) {
+          liList[i].style.display = "list-item";
+        }
+        document.getElementById("clickable").innerHTML = "";
+      }
+    </script>
 
-</head>
-<body>
-	<div>
-		<ul>
-			<li>Java</li>
-			<li>C++</li>
-			<li>Ruby</li>
-			<li>Python</li>
-			<li>Groovy</li>
-			<li class="legacy">COBOL</li>
-			<li class="legacy">C</li>
-			<li class="legacy">FORTRAN</li>
-		</ul>
-		<span id="clickable" onclick="displayAll();"
-		      style="color: white; background-color: black">Tout afficher</span>
-	</div>
-</body>
+  </head>
+  <body>
+    <div>
+      <ul>
+        <li>Java</li>
+        <li>C++</li>
+        <li>Ruby</li>
+        <li>Python</li>
+        <li>Groovy</li>
+        <li class="legacy">COBOL</li>
+        <li class="legacy">C</li>
+        <li class="legacy">FORTRAN</li>
+      </ul>
+      <span id="clickable" onclick="displayAll();"
+            style="color: white; background-color: black">Tout afficher</span>
+    </div>
+  </body>
 </html>
