--- a/Javascript/validation.html
+++ b/Javascript/validation.html
@@ -1,47 +1,47 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Validation de formulaires</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Validation de formulaires</title>
 
-<script type="text/javascript">
-function clearErrorMessages() {
-	document.getElementById("error_lname").innerHTML = "";
-	document.getElementById("error_fname").innerHTML = "";
-}
+    <script>
+      function clearErrorMessages() {
+        document.getElementById("error_lname").innerHTML = "";
+        document.getElementById("error_fname").innerHTML = "";
+      }
 
-function validateInputField(inputId, spanId) {
-	var value = document.getElementById(inputId).value;
-	if (value == null || value === "") {
-		document.getElementById(spanId).innerHTML = "Ce champ doit contenir une valeur!";
-		return false;
-	}
-	
-	return true;
-}
+      function validateInputField(inputId, spanId) {
+        var value = document.getElementById(inputId).value;
+        if (value == null || value === "") {
+          document.getElementById(spanId).innerHTML = "Ce champ doit contenir une valeur!";
+          return false;
+        }
+        
+        return true;
+      }
 
-function checkRequiredFields() {
-	clearErrorMessages();	
-	var field1 = validateInputField("nom", "error_lname");
-	var field2 = validateInputField("prenom", "error_fname"); 
-	return field1 && field2; 
-}
-</script>
+      function checkRequiredFields() {
+        clearErrorMessages();  
+        var field1 = validateInputField("nom", "error_lname");
+        var field2 = validateInputField("prenom", "error_fname"); 
+        return field1 && field2; 
+      }
+    </script>
 
-</head>
-<body>
-	<form action="form.php" method="get" onsubmit="return checkRequiredFields();">
-		<div>
-			<label for="nom">Entrez votre nom : </label>
-			<input type="text" name="lname" id="nom">
-			<span style="color:red" id="error_lname"></span>
-			<br>
-			<label for="prenom">Entrez votre prénom : </label>
-			<input type="text" name="fname" id="prenom">
-			<span style="color:red" id="error_fname"></span>
-			<br>
-			<input type="submit" value="Envoyer">
-		</div>
-	</form>
-</body>
+  </head>
+  <body>
+    <form action="form.php" method="get" onsubmit="return checkRequiredFields();">
+      <div>
+        <label for="nom">Entrez votre nom : </label>
+        <input type="text" name="lname" id="nom">
+        <span style="color:red" id="error_lname"></span>
+        <br>
+        <label for="prenom">Entrez votre prénom : </label>
+        <input type="text" name="fname" id="prenom">
+        <span style="color:red" id="error_fname"></span>
+        <br>
+        <input type="submit" value="Envoyer">
+      </div>
+    </form>
+  </body>
 </html>
