Correction d'une erreur, en classe

--- a/Javascript/fenetre-bouton.html
+++ b/Javascript/fenetre-bouton.html
@@ -15,8 +15,10 @@
       }
       
       function closeWindow() {
-        blackWindow.close();
-        blackWindow = null;
+        if (blackWindow) {
+          blackWindow.close();
+          blackWindow = null;
+        }
       }
     </script>
   </head>
