Remplacer une méthode HTTP

--- a/Javascript/validation.html
+++ b/Javascript/validation.html
@@ -30,7 +30,7 @@
 
   </head>
   <body>
-    <form action="form.php" method="get" onsubmit="return checkRequiredFields();">
+    <form action="form.php" method="post" onsubmit="return checkRequiredFields();">
       <div>
         <label for="nom">Entrez votre nom : </label>
         <input type="text" name="lname" id="nom">
