--- a/Javascript/redirection.html
+++ b/Javascript/redirection.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Redirection in 5 seconds</title>
     <script>
+      "use strict";
       function redirect() {
         window.location = "http://rickrolled.fr/";
       }
